// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoPanel> renders with event with closed entry and registrations 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAccordion-root Mui-expanded css-97wm99-MuiPaper-root-MuiAccordion-root"
    style="--Paper-shadow: none;"
  >
    <h3
      class="MuiAccordion-heading css-rolk5j-MuiAccordion-heading"
    >
      <div
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded css-ag2ckr-MuiButtonBase-root-MuiAccordionSummary-root"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content Mui-expanded css-1betqn-MuiAccordionSummary-content"
        >
          <div
            class="MuiTabs-root css-mvi6nx-MuiTabs-root"
          >
            <div
              class="MuiTabs-scroller MuiTabs-fixed css-1yalo2m-MuiTabs-scroller"
              style="overflow: hidden; margin-bottom: 0px;"
            >
              <div
                class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-19wsa2m-MuiButtonBase-root-MuiTab-root"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  Tapahtuman tilanne
                </button>
                <button
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-19wsa2m-MuiButtonBase-root-MuiTab-root"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Tehtävälista
                </button>
              </div>
              <span
                class="MuiTabs-indicator css-1sj2jcg-MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </div>
      </div>
    </h3>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-wz2cs5-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiAccordion-region"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root css-nw01sv-MuiAccordionDetails-root"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiTableContainer-root css-v73c9r-MuiPaper-root-MuiTableContainer-root"
                style="--Paper-shadow: none;"
              >
                <table
                  class="MuiTable-root css-rqglhn-MuiTable-root"
                >
                  <tbody
                    class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-10ukr6t-MuiTableCell-root"
                        colspan="3"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1qvezp6-MuiTypography-root"
                        >
                          Osallistujat
                        </span>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-174q18p-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1y3uv1t-MuiTypography-root"
                        >
                          ALO
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1vwg8q8-MuiTypography-root"
                        >
                          0
                           / 
                          3
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-s83uo0-MuiButtonBase-root-MuiButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          LÄHETÄ 
                          KOEPAIKKAILMOITUS
                        </button>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-174q18p-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1y3uv1t-MuiTypography-root"
                        >
                          AVO
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1vwg8q8-MuiTypography-root"
                        >
                          0
                           / 
                          1
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-s83uo0-MuiButtonBase-root-MuiButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          LÄHETÄ 
                          KOEPAIKKAILMOITUS
                        </button>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-10ukr6t-MuiTableCell-root"
                        colspan="3"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1qvezp6-MuiTypography-root"
                        >
                          Varasijalla
                        </span>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-174q18p-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1y3uv1t-MuiTypography-root"
                        >
                          ALO
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1vwg8q8-MuiTypography-root"
                        >
                          2
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-s83uo0-MuiButtonBase-root-MuiButton-root"
                          tabindex="0"
                          type="button"
                        >
                          LÄHETÄ VARASIJAILMOITUS
                        </button>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-174q18p-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1y3uv1t-MuiTypography-root"
                        >
                          AVO
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1vwg8q8-MuiTypography-root"
                        >
                          2
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-s83uo0-MuiButtonBase-root-MuiButton-root"
                          tabindex="0"
                          type="button"
                        >
                          LÄHETÄ VARASIJAILMOITUS
                        </button>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiTableContainer-root css-v73c9r-MuiPaper-root-MuiTableContainer-root"
                hidden=""
                style="--Paper-shadow: none;"
              >
                <table
                  class="MuiTable-root css-rqglhn-MuiTable-root"
                >
                  <thead
                    class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
                  >
                    <tr
                      class="MuiTableRow-root MuiTableRow-head css-1q1u3t4-MuiTableRow-root"
                    >
                      <th
                        class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1t7lzbz-MuiTableCell-root"
                        colspan="3"
                        scope="col"
                      >
                        Liitteet
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-174q18p-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1y3uv1t-MuiTypography-root"
                        >
                          Koekutsu
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-10ukr6t-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-hdlvkj-MuiTypography-root"
                        >
                          Ei liitettyä tiedostoa
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-10ukr6t-MuiTableCell-root"
                      >
                        <input
                          accept="application/pdf"
                          hidden=""
                          id="koekutsu-file"
                          type="file"
                        />
                        <label
                          for="koekutsu-file"
                        >
                          <span
                            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-s83uo0-MuiButtonBase-root-MuiButton-root"
                            role="button"
                            tabindex="0"
                          >
                            LIITÄ KOEKUTSU
                          </span>
                        </label>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InfoPanel> renders with event with closed entry and registrations with groups 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAccordion-root Mui-expanded css-97wm99-MuiPaper-root-MuiAccordion-root"
    style="--Paper-shadow: none;"
  >
    <h3
      class="MuiAccordion-heading css-rolk5j-MuiAccordion-heading"
    >
      <div
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded css-ag2ckr-MuiButtonBase-root-MuiAccordionSummary-root"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content Mui-expanded css-1betqn-MuiAccordionSummary-content"
        >
          <div
            class="MuiTabs-root css-mvi6nx-MuiTabs-root"
          >
            <div
              class="MuiTabs-scroller MuiTabs-fixed css-1yalo2m-MuiTabs-scroller"
              style="overflow: hidden; margin-bottom: 0px;"
            >
              <div
                class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-19wsa2m-MuiButtonBase-root-MuiTab-root"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  Tapahtuman tilanne
                </button>
                <button
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-19wsa2m-MuiButtonBase-root-MuiTab-root"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Tehtävälista
                </button>
              </div>
              <span
                class="MuiTabs-indicator css-1sj2jcg-MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </div>
      </div>
    </h3>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-wz2cs5-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiAccordion-region"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root css-nw01sv-MuiAccordionDetails-root"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiTableContainer-root css-v73c9r-MuiPaper-root-MuiTableContainer-root"
                style="--Paper-shadow: none;"
              >
                <table
                  class="MuiTable-root css-rqglhn-MuiTable-root"
                >
                  <tbody
                    class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-10ukr6t-MuiTableCell-root"
                        colspan="3"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1qvezp6-MuiTypography-root"
                        >
                          Osallistujat
                        </span>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-174q18p-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1y3uv1t-MuiTypography-root"
                        >
                          ALO
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1vwg8q8-MuiTypography-root"
                        >
                          1
                           / 
                          3
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-s83uo0-MuiButtonBase-root-MuiButton-root"
                          tabindex="0"
                          type="button"
                        >
                          LÄHETÄ 
                          KOEPAIKKAILMOITUS
                        </button>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-174q18p-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1y3uv1t-MuiTypography-root"
                        >
                          AVO
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1r5wydt-MuiTypography-root"
                        >
                          2
                           / 
                          1
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-s83uo0-MuiButtonBase-root-MuiButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          LÄHETÄ 
                          KOEPAIKKAILMOITUS
                        </button>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-10ukr6t-MuiTableCell-root"
                        colspan="3"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1qvezp6-MuiTypography-root"
                        >
                          Varasijalla
                        </span>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-174q18p-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1y3uv1t-MuiTypography-root"
                        >
                          ALO
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1vwg8q8-MuiTypography-root"
                        >
                          1
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-s83uo0-MuiButtonBase-root-MuiButton-root"
                          tabindex="0"
                          type="button"
                        >
                          LÄHETÄ VARASIJAILMOITUS
                        </button>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-174q18p-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1y3uv1t-MuiTypography-root"
                        >
                          AVO
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1vwg8q8-MuiTypography-root"
                        >
                          0
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-s83uo0-MuiButtonBase-root-MuiButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          LÄHETÄ VARASIJAILMOITUS
                        </button>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiTableContainer-root css-v73c9r-MuiPaper-root-MuiTableContainer-root"
                hidden=""
                style="--Paper-shadow: none;"
              >
                <table
                  class="MuiTable-root css-rqglhn-MuiTable-root"
                >
                  <thead
                    class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
                  >
                    <tr
                      class="MuiTableRow-root MuiTableRow-head css-1q1u3t4-MuiTableRow-root"
                    >
                      <th
                        class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1t7lzbz-MuiTableCell-root"
                        colspan="3"
                        scope="col"
                      >
                        Liitteet
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-174q18p-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1y3uv1t-MuiTypography-root"
                        >
                          Koekutsu
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-10ukr6t-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-hdlvkj-MuiTypography-root"
                        >
                          Ei liitettyä tiedostoa
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-10ukr6t-MuiTableCell-root"
                      >
                        <input
                          accept="application/pdf"
                          hidden=""
                          id="koekutsu-file"
                          type="file"
                        />
                        <label
                          for="koekutsu-file"
                        >
                          <span
                            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-s83uo0-MuiButtonBase-root-MuiButton-root"
                            role="button"
                            tabindex="0"
                          >
                            LIITÄ KOEKUTSU
                          </span>
                        </label>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InfoPanel> renders with no registrations 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAccordion-root Mui-expanded css-97wm99-MuiPaper-root-MuiAccordion-root"
    style="--Paper-shadow: none;"
  >
    <h3
      class="MuiAccordion-heading css-rolk5j-MuiAccordion-heading"
    >
      <div
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded css-ag2ckr-MuiButtonBase-root-MuiAccordionSummary-root"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content Mui-expanded css-1betqn-MuiAccordionSummary-content"
        >
          <div
            class="MuiTabs-root css-mvi6nx-MuiTabs-root"
          >
            <div
              class="MuiTabs-scroller MuiTabs-fixed css-1yalo2m-MuiTabs-scroller"
              style="overflow: hidden; margin-bottom: 0px;"
            >
              <div
                class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-19wsa2m-MuiButtonBase-root-MuiTab-root"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  Tapahtuman tilanne
                </button>
                <button
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-19wsa2m-MuiButtonBase-root-MuiTab-root"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Tehtävälista
                </button>
              </div>
              <span
                class="MuiTabs-indicator css-1sj2jcg-MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </div>
      </div>
    </h3>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-wz2cs5-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiAccordion-region"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root css-nw01sv-MuiAccordionDetails-root"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiTableContainer-root css-v73c9r-MuiPaper-root-MuiTableContainer-root"
                style="--Paper-shadow: none;"
              >
                <table
                  class="MuiTable-root css-rqglhn-MuiTable-root"
                >
                  <tbody
                    class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-10ukr6t-MuiTableCell-root"
                        colspan="3"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1qvezp6-MuiTypography-root"
                        >
                          Osallistujat
                        </span>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-174q18p-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1y3uv1t-MuiTypography-root"
                        >
                          NOU
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1vwg8q8-MuiTypography-root"
                        >
                          0
                           / 
                          10
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-s83uo0-MuiButtonBase-root-MuiButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          LÄHETÄ 
                          KOEPAIKKAILMOITUS
                        </button>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-10ukr6t-MuiTableCell-root"
                        colspan="3"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1qvezp6-MuiTypography-root"
                        >
                          Varasijalla
                        </span>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-174q18p-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1y3uv1t-MuiTypography-root"
                        >
                          NOU
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1vwg8q8-MuiTypography-root"
                        >
                          0
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1tti7u1-MuiTableCell-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-s83uo0-MuiButtonBase-root-MuiButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          LÄHETÄ VARASIJAILMOITUS
                        </button>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiTableContainer-root css-v73c9r-MuiPaper-root-MuiTableContainer-root"
                hidden=""
                style="--Paper-shadow: none;"
              >
                <table
                  class="MuiTable-root css-rqglhn-MuiTable-root"
                >
                  <thead
                    class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
                  >
                    <tr
                      class="MuiTableRow-root MuiTableRow-head css-1q1u3t4-MuiTableRow-root"
                    >
                      <th
                        class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1t7lzbz-MuiTableCell-root"
                        colspan="3"
                        scope="col"
                      >
                        Liitteet
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-174q18p-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1y3uv1t-MuiTypography-root"
                        >
                          Koekutsu
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-10ukr6t-MuiTableCell-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-hdlvkj-MuiTypography-root"
                        >
                          Ei liitettyä tiedostoa
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-10ukr6t-MuiTableCell-root"
                      >
                        <input
                          accept="application/pdf"
                          hidden=""
                          id="koekutsu-file"
                          type="file"
                        />
                        <label
                          for="koekutsu-file"
                        >
                          <span
                            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-s83uo0-MuiButtonBase-root-MuiButton-root"
                            role="button"
                            tabindex="0"
                          >
                            LIITÄ KOEKUTSU
                          </span>
                        </label>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
